--- a/COMPILADO/index.html
+++ b/COMPILADO/index.html
@@ -11,5 +11,5 @@
 <link rel="stylesheet" href="styles-5INURTSO.css"></head>
 <body>
   <app-root></app-root>
-<link rel="modulepreload" href="chunk-FK6H3RFT.js"><link rel="modulepreload" href="chunk-FDERIQAA.js"><script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-MI6TTZDF.js" type="module"></script></body>
+<link rel="modulepreload" href="chunk-FK6H3RFT.js"><link rel="modulepreload" href="chunk-FDERIQAA.js"><script src="polyfills-FFHMD2TL.js" type="module"></script><script src="main-MAJP23MS.js" type="module"></script></body>
 </html>
